# halow-sta

./: .gitignore  Cargo.toml  README.md  halow-design.json  todo.md
.github/workflows/: ci.yml
components/: mm8108-mf15457.kicad_sym
openspec/changes/archive/2026-07-06-adopt-copperleaf-improvements/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-06-adopt-copperleaf-improvements/specs/cli-integration/: spec.md
openspec/specs/cli-integration/: spec.md
src/: board.rs  ethernet_board.rs  main.rs  minimal_board.rs  minimal_lipo_board.rs  reference_design.rs
src/parts/: ht_hc01.rs  mm8108_mf15457.rs  mod.rs  passive.rs  rp2354a.rs  w5500.rs
