[package]
name = "halow-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
copperleaf = { path = "../../copperleaf/new/crates/core" }
copperleaf-backend-kicad = {
  path = "../../copperleaf/new/crates/backend-kicad"
}
copperleaf-parts-morsemicro = { path = "../../copperleaf/new/parts/morsemicro" }
copperleaf-parts-raspberrypi = {
  path = "../../copperleaf/new/parts/raspberrypi"
}
copperleaf-parts-wiznet = { path = "../../copperleaf/new/parts/wiznet" }
copperleaf-parts-passives = { path = "../../copperleaf/new/parts/passives" }
