[package]
name = "halow-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "help"] }
copperleaf = { path = "../../copperleaf/main/crates/core" }
copperleaf-backend-kicad = {
  path = "../../copperleaf/main/crates/backend-kicad"
}
copperleaf-compile = { path = "../../copperleaf/main/crates/compile" }
copperleaf-parts-connectors = { path = "../../copperleaf/main/parts/connectors" }
copperleaf-parts-microchip = { path = "../../copperleaf/main/parts/microchip" }
copperleaf-parts-morsemicro = { path = "../../copperleaf/main/parts/morsemicro" }
copperleaf-parts-passives = { path = "../../copperleaf/main/parts/passives" }
copperleaf-parts-raspberrypi = {
  path = "../../copperleaf/main/parts/raspberrypi"
}
copperleaf-parts-texas-instruments = {
  path = "../../copperleaf/main/parts/texas-instruments"
}
copperleaf-parts-wiznet = { path = "../../copperleaf/main/parts/wiznet" }
